# NovaDream

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
assets/: io.github.FemBoyGamerTechGuy.NovaDream.metainfo.xml
assets/desktop/: io.github.FemBoyGamerTechGuy.NovaDream.desktop
src/: app.rs  config.rs  game.rs  local_library.rs  main.rs  proton.rs  tray.rs  umu.rs
src/stores/: epic.rs  gog.rs  itch.rs  mod.rs  steam.rs
src/ui/: add_game.rs  game_card.rs  game_defaults.rs  game_settings.rs  library.rs  login.rs  mod.rs  settings.rs  store.rs
