[package]
name        = "NovaDream"
version     = "0.1.0"
edition     = "2021"
description = "A dreamy void-themed game launcher with multi-store support"
license     = "GPL-3.0-or-later"
authors     = ["FemBoyGamerTechGuy"]

[[bin]]
name = "NovaDream"
path = "src/main.rs"

[dependencies]
gtk4            = { version = "0.11", features = ["v4_12"] }
gdk-pixbuf      = "0.22"
glib            = "0.22"
ksni            = { version = "0.3", features = ["blocking"] }
tokio           = { version = "1", features = ["full"] }
reqwest         = { version = "0.13", features = ["json", "stream"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
dirs            = "6"
anyhow          = "1"

[profile.release]
opt-level     = 3
strip         = true
lto           = true
codegen-units = 1

[package.metadata.deb]
maintainer = "FemBoyGamerTechGuy"
depends    = "libgtk-4-1, libayatana-appindicator3-1"
section    = "games"

[package.metadata.generate-rpm]
requires = [{ name = "gtk4" }, { name = "libayatana-appindicator" }]
